[gd_scene load_steps=7 format=3 uid="uid://bk1ykl70heg8x"]

[ext_resource type="Script" uid="uid://caalqoufcqtmt" path="res://UI/Start Menu/start_menu.gd" id="1_rhogp"]
[ext_resource type="Texture2D" uid="uid://jykfd080rsnn" path="res://UI/Start Menu/title_screen.jpg" id="1_tr7dd"]
[ext_resource type="Texture2D" uid="uid://bbn8mxih01mw1" path="res://UI/Start Menu/Start_Neutral.png" id="2_rhogp"]
[ext_resource type="Texture2D" uid="uid://dvpk05rc2qhpi" path="res://UI/Start Menu/Quit_Neutral.png" id="3_rbnly"]
[ext_resource type="Texture2D" uid="uid://b8p57jxeavxax" path="res://UI/Start Menu/Tutorial_Neutral.png" id="4_al0ai"]
[ext_resource type="Texture2D" uid="uid://cadj6k2b7v5tv" path="res://UI/Start Menu/Options_Neutral.png" id="5_rumb2"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rhogp")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_tr7dd")
expand_mode = 2
stretch_mode = 5

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = 76.0
offset_right = 1306.0
offset_bottom = 593.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.4, 0.4)
theme_override_constants/h_separation = 30
theme_override_constants/v_separation = 25
columns = 2

[node name="Start" type="TextureButton" parent="GridContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("2_rhogp")

[node name="Quit" type="TextureButton" parent="GridContainer"]
layout_mode = 2
mouse_default_cursor_shape = 8
texture_normal = ExtResource("3_rbnly")

[node name="Tutorial" type="TextureButton" parent="GridContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("4_al0ai")

[node name="Option" type="TextureButton" parent="GridContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("5_rumb2")

[connection signal="pressed" from="GridContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="GridContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="GridContainer/Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="GridContainer/Option" to="." method="_on_option_pressed"]
